README, Load More, Markdown, and little message with the number of posts and pages on screen

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         </noscript>
         <div id="app"></div>
         <script type="module" src="/src/main.js"></script>
+        <script type="text/javascript" src="dist/purify.min.js"></script>
     </body>
 </html>
